[gd_scene load_steps=3 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="Tween" type="Tween" parent="."]

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 393, 226 )
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="."]
margin_left = 343.0
margin_top = 143.0
margin_right = 435.0
margin_bottom = 157.0
text = "Hit F1 to reset"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
[connection signal="tween_step" from="Tween" to="." method="_on_Tween_tween_step"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
